# ai-dev-example

./: API_DOCUMENTATION.md  Cargo.toml  README.md  WORKSPACE_OVERVIEW.md  nx.json  package-lock.json  package.json  verify-setup.sh
.github/workflows/: ci.yml
.nx/workspace-data/: file-map.json  nx_files.nxt  project-graph.json  source-maps.json
apps/my_app/: Cargo.toml  project.json
apps/my_app/src/: main.rs
bruno-collection/: Create Pet.bru  Delete Pet.bru  Get Pet by ID.bru  Health Check.bru  List All Pets.bru  Update Pet.bru  bruno.json
libs/api/: Cargo.toml  project.json
libs/api/src/: lib.rs  lib.rs.bak
libs/core/: Cargo.toml
libs/core/src/: lib.rs
libs/data/: Cargo.toml  project.json
libs/data/src/: lib.rs
libs/utils/: Cargo.toml  project.json
libs/utils/src/: lib.rs
static/: environment.js
