[package]
name = "my_app"
version = "0.1.0"
edition = "2021"


[dependencies]
api = { path = "../../libs/api" }
core = { path = "../../libs/core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
