[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
